<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_loading">Loading…</string>
    <string name="app_name">msa-auth</string>
    <string name="boxsdk_Authenticating">Authenticating</string>
    <string name="boxsdk_Authentication_cancelled">Authentication Cancelled</string>
    <string name="boxsdk_Authentication_fail">Authentication Failed</string>
    <string name="boxsdk_Authentication_fail_forbidden">Contact your administrator to authorize this device.</string>
    <string name="boxsdk_Authentication_fail_url_mismatch">The redirect url is not valid</string>
    <string name="boxsdk_Cancel">Cancel</string>
    <string name="boxsdk_Continue">Continue</string>
    <string name="boxsdk_Create_folder">Create folder</string>
    <string name="boxsdk_Go_back">Go back</string>
    <string name="boxsdk_Please_wait">Please wait…</string>
    <string name="boxsdk_Security_Warning">Security Warning</string>
    <string name="boxsdk_Select">Select</string>
    <string name="boxsdk_Select_an_account_to_use">Select an account to use</string>
    <string name="boxsdk_There_are_problems_with_the_security_certificate_for_this_site">There are problems with the security certificate for this site.</string>
    <string name="boxsdk_Use_a_different_account">Use a different account</string>
    <string name="boxsdk_alert_dialog_cancel">Cancel</string>
    <string name="boxsdk_alert_dialog_ok">Submit</string>
    <string name="boxsdk_alert_dialog_password">Password</string>
    <string name="boxsdk_alert_dialog_text_entry">This website or application is requesting authentication.</string>
    <string name="boxsdk_alert_dialog_username">Username</string>
    <string name="boxsdk_box_app_signature">308201fd30820166a00302010202044c8a3289300d06092a864886f70d01010505003043310b3009060355040613024341310b3009060355040813024f6e310f300d060355040713064f747461776131163014060355040a130d426974686561647320496e632e301e170d3130303931303133323834315a170d3335303930343133323834315a3043310b3009060355040613024341310b3009060355040813024f6e310f300d060355040713064f747461776131163014060355040a130d426974686561647320496e632e30819f300d06092a864886f70d010101050003818d0030818902818100926a2f83b01d88c31614e8b398b40606aa098949d97922332cee24e7362b77bc8dfd3b3556f0f787042cf1d17ff5fb0dd8672d5d2bfc903a2b1ef330d7323a00b8b6187e000a0d1a34fe0e6dcfdd1bbd021718a5fed5249348f24626b7b2c5d35d70b8c6a1436be8006c8843bcf1b5dea829c9d48aa77d06ebc0eeac294388b70203010001300d06092a864886f70d0101050500038181009170b46b82a7e5529d7e8c9ce45d1ad6ba539a0808c278923e5d8740686f1069f744d2bf18ce239f1f082a3c3c810947c42f972464f1cc9c4e5f39b7eee4282d6a617d4cea94677154d5f58629dcad04fae7540936838d466cd0c08831dba6b4989459a460cccc741f5fe2affffb42ef47943cc2fa7017fecfbf3dfd6cfb07d0</string>
    <string name="boxsdk_common_name">common name:</string>
    <string name="boxsdk_details">Details</string>
    <string name="boxsdk_error_fatal_refresh">You have been logged out.</string>
    <string name="boxsdk_error_network_connection">Unable to detect a network connection</string>
    <string name="boxsdk_error_terms_of_service">Your administrator has changed your TOS. You must login, and accept the TOS to continue.</string>
    <string name="boxsdk_expires_on">expires on:</string>
    <string name="boxsdk_fingerprints">fingerprints:</string>
    <string name="boxsdk_issued_by">issued by:</string>
    <string name="boxsdk_issued_on">issued on:</string>
    <string name="boxsdk_issued_to">issued to:</string>
    <string name="boxsdk_no_offline_access">No offline access</string>
    <string name="boxsdk_no_offline_access_detail">"We couldn't detect a network connection."</string>
    <string name="boxsdk_no_offline_access_todo">To log in, connect to a WiFi or mobile data network.</string>
    <string name="boxsdk_org_name">organization name:</string>
    <string name="boxsdk_org_unit">organization unit:</string>
    <string name="boxsdk_serial_number">serial number:</string>
    <string name="boxsdk_sha1_fingerprint">sha 1:</string>
    <string name="boxsdk_sha256_fingerprint">sha 256:</string>
    <string name="boxsdk_ssl_error_details">View details</string>
    <string name="boxsdk_ssl_error_warning_DATE_INVALID">The date of the certificate is invalid.</string>
    <string name="boxsdk_ssl_error_warning_EXPIRED">The certificate has expired.</string>
    <string name="boxsdk_ssl_error_warning_ID_MISMATCH">Hostname mismatch.</string>
    <string name="boxsdk_ssl_error_warning_INVALID">A generic error occurred.</string>
    <string name="boxsdk_ssl_error_warning_NOT_YET_VALID">The certificate is not yet valid.</string>
    <string name="boxsdk_ssl_error_warning_UNTRUSTED">The certificate authority is not trusted.</string>
    <string name="boxsdk_ssl_should_not_proceed">You should not proceed, especially if you have never seen this warning before for this site.</string>
    <string name="boxsdk_title_activity_oauth">OAuthActivity</string>
    <string name="boxsdk_unable_to_connect">Unable to connect</string>
    <string name="boxsdk_unable_to_connect_detail">We were unable to connect to your network.</string>
    <string name="boxsdk_unable_to_connect_todo">Check your network connection and try again.</string>
    <string name="boxsdk_validity_period">validity period:</string>
    <string name="broker_processing">Broker is processing</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="zm_bnt_clear">Clear</string>
    <string name="zm_bnt_redo">Redo</string>
    <string name="zm_bnt_undo">Undo</string>
    <string name="zm_btn_autoLine">Line</string>
    <string name="zm_btn_back">Back</string>
    <string name="zm_btn_buddy_invite_send">Invite</string>
    <string name="zm_btn_cancel">Cancel</string>
    <string name="zm_btn_chats">Chats</string>
    <string name="zm_btn_color">Color</string>
    <string name="zm_btn_copy">Copy</string>
    <string name="zm_btn_done">Done</string>
    <string name="zm_btn_get_started">Get Started</string>
    <string name="zm_btn_highlight">Highlighter</string>
    <string name="zm_btn_lower_hand">Lower Hand</string>
    <string name="zm_btn_more_no_dot">More</string>
    <string name="zm_btn_mute_audio">Mute Audio</string>
    <string name="zm_btn_oval">Oval</string>
    <string name="zm_btn_participants_chat">Participants</string>
    <string name="zm_btn_pen">Pen</string>
    <string name="zm_btn_qa">Q&amp;A</string>
    <string name="zm_btn_raise_hand">Raise Hand</string>
    <string name="zm_btn_rectangle">Rectangle</string>
    <string name="zm_btn_send">Send</string>
    <string name="zm_btn_share">Share</string>
    <string name="zm_btn_share_box">Box</string>
    <string name="zm_btn_share_dropbox">Dropbox</string>
    <string name="zm_btn_share_from_bookmark">Bookmark</string>
    <string name="zm_btn_share_google_drive">Google Drive</string>
    <string name="zm_btn_share_image">Photo</string>
    <string name="zm_btn_share_local_file">Document</string>
    <string name="zm_btn_share_one_drive">Microsoft OneDrive</string>
    <string name="zm_btn_share_one_drive_business_36279">Microsoft OneDrive for Business</string>
    <string name="zm_btn_share_screen">Screen</string>
    <string name="zm_btn_share_url">Web URL</string>
    <string name="zm_btn_share_whiteboard">Share Whiteboard</string>
    <string name="zm_btn_spotlight">Spotlight</string>
    <string name="zm_btn_start_annotation">Annotation</string>
    <string name="zm_btn_stop_share">Stop Share</string>
    <string name="zm_btn_stop_video">Stop Video</string>
    <string name="zm_hint_buddy_invite_email">Enter email addresses here, separated by commas.</string>
    <string name="zm_hint_first_name">First Name</string>
    <string name="zm_hint_last_name">Last Name</string>
    <string name="zm_hint_retype_pwd">Confirm Password</string>
    <string name="zm_hint_zoom_pwd">Password</string>
    <string name="zm_lbl_buddy_invite_email">To invite people to Google IM, type their email addresses below:</string>
    <string name="zm_msg_confirm_password_not_match">"Confirm password doesn't match"</string>
    <string name="zm_msg_feedback_welcome">"For technical support, please visit &lt;a href=%s>Support&lt;/a>.

We also welcome your ideas, requests or comments. Please enter your feedback here:"</string>
    <string name="zm_msg_indication_email_verified">Email verified</string>
    <string name="zm_msg_invite_indication_message_1">1. Go to %1$s</string>
    <string name="zm_msg_invite_indication_message_2">2. Enter ID:</string>
    <string name="zm_msg_invite_indication_title">Call the person and say:</string>
    <string name="zm_msg_sending_feedback">Sending…</string>
    <string name="zm_msg_sent_feedback_failed">Failed to send your feedback. Please try again later.</string>
    <string name="zm_msg_thanks_for_feedback">"Thanks for your feedback!

Your feedback is very important to us, and we're working hard to improve our service."</string>
    <string name="zm_qa_msg_waiting_live_answer_41047">%s would like to answer this question live</string>
    <string name="zm_title_create_profile">Create Profile</string>
    <string name="zm_title_feedback">Feedback</string>
    <string name="zm_title_invite">Invite</string>
</resources>