<?xml version="1.0" encoding="utf-8"?>
<us.zoom.androidlib.widget.ZMToolbarLayout n1:orientation="horizontal" n1:background="@drawable/zm_bottom_toolbar_bg" n1:focusable="false" n1:layout_width="fill_parent" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnAudio" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n2:zm_icon="@drawable/zm_btn_mute_audio" n2:zm_text="@string/zm_btn_mute_audio" xmlns:n2="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnVideo" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n3:zm_icon="@drawable/zm_btn_mute_video" n3:zm_text="@string/zm_btn_stop_video" xmlns:n3="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnShare" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n4:zm_icon="@drawable/zm_btn_share" n4:zm_text="@string/zm_btn_share" xmlns:n4="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnStopShare" n1:focusable="true" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n5:zm_icon="@drawable/zm_btn_stopshare" n5:zm_text="@string/zm_btn_stop_share" xmlns:n5="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.PListButton n1:id="@id/btnChats" n1:background="@color/zm_transparent" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n6:zm_icon="@drawable/zm_btn_chats" n6:zm_text="@string/zm_btn_chats" xmlns:n6="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnRaiseHand" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n7:zm_icon="@drawable/zm_btn_raisehand" n7:zm_text="@string/zm_btn_raise_hand" xmlns:n7="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnLowerHand" n1:focusable="true" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n8:zm_icon="@drawable/zm_btn_lowerhand" n8:zm_text="@string/zm_btn_lower_hand" xmlns:n8="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.PListButton n1:id="@id/btnPList" n1:background="@color/zm_transparent" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n9:zm_icon="@drawable/zm_btn_plist" n9:zm_text="@string/zm_btn_participants_chat" xmlns:n9="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnQA" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n10:zm_icon="@drawable/zm_btn_qa" n10:zm_text="@string/zm_btn_qa" xmlns:n10="http://schemas.android.com/apk/res-auto" />
    <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnMore" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n11:zm_icon="@drawable/zm_btn_more" n11:zm_text="@string/zm_btn_more_no_dot" xmlns:n11="http://schemas.android.com/apk/res-auto" />
</us.zoom.androidlib.widget.ZMToolbarLayout>