<?xml version="1.0" encoding="utf-8"?>
<ScrollView n1:layout_width="wrap_content" n1:layout_height="wrap_content"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:orientation="vertical" n1:id="@id/shareItemContainer" n1:paddingTop="10.0dip" n1:paddingBottom="10.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:minWidth="200.0dip">
        <TextView n1:gravity="center|left" n1:id="@id/share_image" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_image" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_native_file" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_local_file" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_box" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_box" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_dropbox" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_dropbox" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_google_drive" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_google_drive" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_one_drive" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_one_drive" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_one_drive_business" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_one_drive_business_36279" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_url" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_url" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_from_bookmark" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_from_bookmark" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_screen" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_screen" style="@style/ZMTextView.SettingsItem" />
        <TextView n1:gravity="center|left" n1:id="@id/share_whiteboard" n1:background="@drawable/zm_settings_item_selector" n1:focusable="true" n1:clickable="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_share_whiteboard" style="@style/ZMTextView.SettingsItem" />
    </LinearLayout>
</ScrollView>