<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <RelativeLayout n1:id="@id/panelTitleBar" n1:layout_width="fill_parent" n1:layout_height="wrap_content" style="@style/ZMTitleBar">
        <Button n1:id="@id/btnBack" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_btn_back" n1:layout_alignParentLeft="true" n1:layout_centerVertical="true" style="@style/ZMBackButton" />
        <TextView n1:gravity="center_horizontal" n1:id="@id/txtTitle" n1:paddingLeft="5.0dip" n1:paddingRight="5.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_title_invite" n1:layout_centerHorizontal="true" n1:layout_centerVertical="true" style="@style/ZMTextView.Title" />
    </RelativeLayout>
    <LinearLayout n1:gravity="left" n1:orientation="vertical" n1:padding="20.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <TextView n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_msg_invite_indication_title" style="@style/ZMTextView.Medium.OnLight" />
        <TextView n1:id="@id/txtInviteIndication" n1:paddingLeft="10.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_msg_invite_indication_message_1" style="@style/ZMTextView.Medium.OnLight" />
        <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <TextView n1:paddingLeft="10.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_msg_invite_indication_message_2" style="@style/ZMTextView.Medium.OnLight" />
            <TextView n1:textColor="#ffff0000" n1:layout_gravity="bottom" n1:id="@id/txtMeetingNumber" n1:paddingLeft="5.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="000-000-000" style="@style/ZMTextView.Medium.OnLight" />
        </LinearLayout>
        <Button n1:id="@id/btnCopy" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip" n1:text="@string/zm_btn_copy" />
    </LinearLayout>
</LinearLayout>