<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <RelativeLayout n1:id="@id/panelTitleBar" n1:layout_width="fill_parent" n1:layout_height="@dimen/zm_pt_titlebar_height" style="@style/ZMTitleBar">
        <Button n1:id="@id/btnBack" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_btn_back" n1:layout_alignParentLeft="true" n1:layout_centerVertical="true" style="@style/ZMBackButton" />
        <TextView n1:gravity="center_horizontal" n1:id="@id/txtTitle" n1:paddingLeft="5.0dip" n1:paddingRight="5.0dip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_title_feedback" n1:layout_centerHorizontal="true" n1:layout_centerVertical="true" style="@style/ZMTextView.Title" />
    </RelativeLayout>
    <ScrollView n1:id="@id/panelOptions" n1:layout_width="fill_parent" n1:layout_height="fill_parent">
        <LinearLayout n1:orientation="vertical" n1:padding="10.0dip" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <LinearLayout n1:orientation="vertical" n1:id="@id/panelSendFeedback" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
                <TextView n1:id="@id/txtWelcome" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_msg_feedback_welcome" style="@style/ZMTextView.Medium.OnLight" />
                <EditText n1:gravity="top" n1:id="@id/edtFeedback" n1:layout_width="fill_parent" n1:layout_height="80.0dip" n1:layout_marginLeft="10.0dip" n1:layout_marginTop="5.0dip" n1:layout_marginRight="10.0dip" n1:inputType="textMultiLine" />
                <Button n1:id="@id/btnSend" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginLeft="10.0dip" n1:layout_marginTop="10.0dip" n1:layout_marginRight="10.0dip" n1:text="@string/zm_btn_send" style="@style/ZMButton.HappyPath" />
            </LinearLayout>
            <TextView n1:id="@id/txtSending" n1:background="@drawable/zm_note_tip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_msg_sending_feedback" n1:layout_weight="1.0" style="@style/ZMTextView.Medium.OnLight" />
            <TextView n1:id="@id/txtSentFailed" n1:background="@drawable/zm_note_tip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_msg_sent_feedback_failed" n1:layout_weight="1.0" style="@style/ZMTextView.Medium.OnLight" />
            <TextView n1:id="@id/txtThanks" n1:background="@drawable/zm_note_tip" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:text="@string/zm_msg_thanks_for_feedback" n1:layout_weight="1.0" style="@style/ZMTextView.Medium.OnLight" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>