<?xml version="1.0" encoding="utf-8"?>
<com.zipow.videobox.view.ToolbarDragView n1:orientation="vertical" n1:layout_width="wrap_content" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:id="@id/tool_bar" n1:padding="@dimen/zm_share_toolbar_margin" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
        <us.zoom.androidlib.widget.ZMToolbarLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="wrap_content">
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnAnnotation" n1:background="@drawable/zm_toolbar_annotation_bgcolor" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n2:zm_icon="@drawable/zm_screenshare_anno" n2:zm_text="@string/zm_btn_start_annotation" n2:zm_textSize="8.0sp" xmlns:n2="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnSpotlight" n1:background="@color/zm_toolbar_screenshare_bg" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n3:zm_icon="@drawable/zm_anno_spotlight" n3:zm_text="@string/zm_btn_spotlight" n3:zm_textSize="8.0sp" xmlns:n3="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnPen" n1:background="@color/zm_toolbar_screenshare_bg" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n4:zm_icon="@drawable/zm_anno_pen" n4:zm_text="@string/zm_btn_pen" n4:zm_textSize="8.0sp" xmlns:n4="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnHighlight" n1:background="@color/zm_toolbar_screenshare_bg" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n5:zm_icon="@drawable/zm_anno_highlight" n5:zm_text="@string/zm_btn_highlight" n5:zm_textSize="8.0sp" xmlns:n5="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnAutoLine" n1:background="@color/zm_toolbar_screenshare_bg" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n6:zm_icon="@drawable/zm_anno_line" n6:zm_text="@string/zm_btn_autoLine" n6:zm_textSize="8.0sp" xmlns:n6="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnRectangle" n1:background="@color/zm_toolbar_screenshare_bg" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n7:zm_icon="@drawable/zm_anno_rectangle" n7:zm_text="@string/zm_btn_rectangle" n7:zm_textSize="8.0sp" xmlns:n7="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnOval" n1:background="@color/zm_toolbar_screenshare_bg" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n8:zm_icon="@drawable/zm_anno_oval" n8:zm_text="@string/zm_btn_oval" n8:zm_textSize="8.0sp" xmlns:n8="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnUndo" n1:background="@color/zm_toolbar_screenshare_bg" n1:focusable="true" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n9:zm_icon="@drawable/zm_anno_undo" n9:zm_text="@string/zm_bnt_undo" n9:zm_textSize="8.0sp" xmlns:n9="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnRedo" n1:background="@color/zm_toolbar_screenshare_bg" n1:focusable="true" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n10:zm_icon="@drawable/zm_anno_redo" n10:zm_text="@string/zm_bnt_redo" n10:zm_textSize="8.0sp" xmlns:n10="http://schemas.android.com/apk/res-auto" />
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnClear" n1:background="@color/zm_toolbar_screenshare_bg" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n11:zm_icon="@drawable/zm_anno_clear" n11:zm_text="@string/zm_bnt_clear" n11:zm_textSize="8.0sp" xmlns:n11="http://schemas.android.com/apk/res-auto" />
            <RelativeLayout n1:orientation="vertical" n1:id="@id/btnColorIndicator" n1:background="@color/zm_toolbar_screenshare_bg" n1:paddingTop="4.0dip" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="wrap_content">
                <com.zipow.videobox.share.ColorSelectedImage n1:id="@id/colorImage" n1:duplicateParentState="true" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:src="@drawable/zm_anno_circle" n1:layout_centerHorizontal="true" />
                <TextView n1:textSize="8.0sp" n1:gravity="center" n1:duplicateParentState="true" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_btn_color" n1:singleLine="true" n1:layout_below="@id/colorImage" n1:layout_centerHorizontal="true" style="@style/ZMTextView.ToolbarBtnLabel" />
            </RelativeLayout>
            <com.zipow.videobox.view.ToolbarButton n1:id="@id/btnStopShare" n1:background="@drawable/zm_toolbar_stopshare_bgcolor" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n12:zm_icon="@drawable/zm_screenshare_stop" n12:zm_text="@string/zm_btn_stop_share" n12:zm_textSize="8.0sp" xmlns:n12="http://schemas.android.com/apk/res-auto" />
        </us.zoom.androidlib.widget.ZMToolbarLayout>
    </LinearLayout>
    <View n1:id="@id/toolbar_bg" n1:background="@drawable/zm_screenshare_toolbar_bg_normal" n1:layout_width="fill_parent" n1:layout_height="fill_parent" n1:layout_alignLeft="@id/tool_bar" n1:layout_alignTop="@id/tool_bar" n1:layout_alignRight="@id/tool_bar" n1:layout_alignBottom="@id/tool_bar" />
</com.zipow.videobox.view.ToolbarDragView>