<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:paddingLeft="10.0dip" n1:paddingTop="5.0dip" n1:paddingRight="10.0dip" n1:paddingBottom="10.0dip" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <TextView n1:gravity="left" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:text="@string/zm_lbl_buddy_invite_email" style="@style/ZMTextView.Medium.OnLight" />
    <EditText n1:id="@id/edtEmail" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="5.0dip" n1:hint="@string/zm_hint_buddy_invite_email">
        <requestFocus />
    </EditText>
    <Button n1:id="@id/btnSend" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_marginTop="10.0dip" n1:text="@string/zm_btn_buddy_invite_send" style="@style/ZMButton.HappyPath" />
</LinearLayout>